# metal-cpp-exercise

./: .gitignore  CMakeLists.txt  Makefile  add.metal  main.cpp  metal_adder.cpp  metal_adder.hpp
